# music-2-notes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  process_audio.py  pyproject.toml  validate_core.py
.agents/skills/machine-learning-engineer/: SKILL.md
docs/: DEPLOY.md  skill-music2notes.md
notebooks/: colab_server.ipynb
scripts/: verify_setup.fish  verify_setup.sh
src/api/: main.py
src/api/models/: requests.py  responses.py
src/api/v1/: health.py  jobs.py  router.py
src/audio/: json_formatter.py  key_detector.py  loader.py  midi_generator.py  models.py  note_segmenter.py  pitch_detector.py  pitch_post_processor.py  preprocessor.py
src/core/: config.py  exceptions.py  security.py
src/db/: base.py
src/db/models/: job.py
src/db/repositories/: job_repo.py
src/storage/: base.py  local.py
src/utils/: converters.py
src/workers/: audio_worker.py
